# WetExplorer-Autonomous-Tracked-Robot

./: Dockerfile  README.md  build.sh  entrypoint.sh  requirements_pending.txt  run.sh  run_cuda.sh
catkin_ws/src/wetexplorer/wetexplorer_gazebo/: CMakeLists.txt  package.xml
catkin_ws/src/wetexplorer/wetexplorer_hardware/: CMakeLists.txt
catkin_ws/src/wetexplorer/wetexplorer_vision/: CMakeLists.txt
config/: .bashrc
docker/: Dockerfile  entrypoint.sh  requirements_pending
docker/config/: .bashrc  hosts
maxxii/: CMakeLists.txt  package.xml
maxxii/config/: controllers.yaml
maxxii/launch/: control.launch  view.launch
maxxii/urdf/: cylinder_inertia.xacro  front_wheel.xacro  maxii.xacro  rear_wheel.xacro  robot.xacro
ros2_ws/: source.sh
ros2_ws/log/: latest_build
ros2_ws/src/robo_base/robo_base/: CMakeLists.txt  package.xml  readme
ros2_ws/src/robo_base/robo_base/include/robo_base/: Constants.h  ErrorCodes.h  print.hex
ros2_ws/src/robo_base/robo_base/launch/: base.launch  plan.launch
ros2_ws/src/robo_base/robo_base/src/: gps_rtk.cpp  laser.cpp  robo_enable_atlas.cpp  xbot_joy.cpp
ros2_ws/src/wetexplorer/wetexplorer_control/: CMakeLists.txt
ros2_ws/src/wetexplorer/wetexplorer_description/: CMakeLists.txt  package.xml
ros2_ws/src/wetexplorer/wetexplorer_description/config/: default.rviz  viewer.rviz
ros2_ws/src/wetexplorer/wetexplorer_description/launch/: description.launch.py  description_tracks.launch.py  rsp.launch.py
ros2_ws/src/wetexplorer/wetexplorer_description/meshes/: power_pulley_left_link.STL  pulleys_left_link.STL  pulleys_right_link.STL
ros2_ws/src/wetexplorer/wetexplorer_description/meshes/WETExplorer/: base_link.STL  central_frame_link.STL  coupling_link.STL  gas_analyzer_link.STL  imu_link.STL  prismatic_link.STL  pulley_support_left_link.STL
ros2_ws/src/wetexplorer/wetexplorer_description/meshes/extra/: camera_link.STL  chamber_original.STL  gas_analyzer_link.STL
ros2_ws/src/wetexplorer/wetexplorer_description/rviz/: viewer.rviz
ros2_ws/src/wetexplorer/wetexplorer_description/urdf/: Frame.xacro  Robot_System.xacro  camera.xacro  central_frame.xacro  chassis.xacro  chassis_static.xacro  cylinder_inertia.xacro  tracks.xacro  wheels.xacro
ros2_ws/src/wetexplorer/wetexplorer_description/urdf/accesories/: aluminium_frame.xacro  central_frame.xacro  gas_analyzer.xacro  gps.xacro  imu.xacro  linear_actuator.xacro
ros2_ws/src/wetexplorer/wetexplorer_description/urdf/tracks/: tracks_static.xacro
ros2_ws/src/wetexplorer/wetexplorer_description/urdf/wheels/: pseudowheels.xacro  tracks_static.xacro
ros2_ws/src/wetexplorer/wetexplorer_gazebo/: CMakeLists.txt
ros2_ws/src/wetexplorer/wetexplorer_vision/: package.xml  setup.cfg  setup.py
src/Localization_Prototype/: CMakeLists.txt  package.xml
src/Localization_Prototype/launch/: display.launch  gazebo.launch
src/Localization_Prototype/urdf/: Localization_Prototype.csv  Localization_Prototype.urdf
src/hector_tracked_vehicles_description/launch/: spawn_jasmine.launch  spawn_jasmine_ugv_base.launch  spawn_jasmine_ugv_vision_box.launch  xacrodisplay_jasmine_ugv_vision_box.launch
src/hector_tracked_vehicles_description/urdf/: jasmine.urdf.xacro  jasmine_ugv_standalone.urdf.xacro
src/max_light_pkg/: CMakeLists.txt  package.xml
src/max_light_pkg/config/: controllers.yaml  ekf_gps2.yaml  localization.yaml
src/max_light_pkg/launch/: control.launch  localize.launch  world.launch
src/max_light_pkg/models/heightmap/: model.sdf
src/max_light_pkg/models/ring/: model.sdf
src/max_light_pkg/rviz/: default.rviz  viewer.rviz
src/max_light_pkg/urdf/: Assembly_with_GPS.urdf  front_wheel.xacro  max_light.xacro  max_light_pkg.csv  max_light_pkg.urdf  max_light_remastered.urdf  mid_front_wheel.xacro  mid_rear_wheel.xacro  rear_wheel.xacro  robot.xacro  robot_remastered.xacro
src/max_light_pkg/urdf/remastered/: .~lock.max_light_remastered.csv#  front_wheel.xacro  max_light_remastered.csv  max_light_remastered.xacro  mid_front_wheel.xacro  mid_rear_wheel.xacro  (+1 more)
src/max_light_pkg/worlds/: wetland.world
src/maxxii/config/: controllers.yaml
src/maxxii/launch/: control.launch  view.launch
src/maxxii/urdf/: maxii.xacro  maxxii.urdf  robot.urdf  robot.xacro
src/maxxii____/launch/: view.launch
src/maxxii____/urdf/: front_wheel.xacro  rear_wheel.xacro  robot.urdf  robot.xacro
src/my_robot_controller/: package.xml
src/my_robot_controller/scripts/: draw_circle.py  my_first_node.py
src/proto_localization/: CMakeLists.txt  package.xml
src/proto_localization/launch/: display.launch  gazebo.launch
src/proto_localization/meshes/: base_link.STL
src/proto_localization/urdf/: proto_localization.csv  proto_localization.urdf
src/proto_pkg/: CMakeLists.txt  package.xml
src/proto_pkg/launch/: display.launch  display2.launch  gazebo.launch
src/proto_pkg/meshes/: base_link.STL
src/proto_pkg/urdf/: proto_pkg.csv  proto_pkg.urdf
src/readings_corrections/: 2024-06-28-15-44-12.7z  2024-07-05-13-33-58.bag  2024-07-05-13-36-28.bag  2024-07-26-19-52-18.bag  2024-08-09-08-04-49.bag  CMakeLists.txt  package.xml
src/readings_corrections/config/: imu_transformer.yaml
src/readings_corrections/scripts/: corrections.py  corrections2.py  gps_plot.py  gps_transform.py  heading_correction.py  imu_to_base_link.py  odom_gps.py  path.py  sensor_corrections.py
src/test33/: CMakeLists.txt  package.xml
src/wetexplorer/wetexplorer_control/: package.xml
src/wetexplorer/wetexplorer_description/: CMakeLists.txt  package.xml
src/wetexplorer/wetexplorer_hardware/: package.xml
src/wetexplorer/wetexplorer_navigation/: CMakeLists.txt  package.xml
src/wetexplorer_control/config/: twist_mux.yaml
src/wetexplorer_control/launch/: teleop.launch
src/wetexplorer_hardware/: CMakeLists.txt  package.xml
src/wetexplorer_hardware/launch/: hardware.launch  localize.launch
src/wetexplorer_hardware/rviz/: ekf.rviz
src/wetexplorer_nav/: CMakeLists.txt  package.xml
src/wetexplorer_nav/config/: costmap_common.yaml  sensor_fusion_full.yaml  test.yaml
src/wetexplorer_nav/scripts/: odometry_tcp.py
(+328 files in other folders)
