<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>wetexplorer_description</name>
  <version>0.2.0</version>
  <description>The wetexplorer_description package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="josepablovasro@gmail.com">Jose Vasquez</maintainer>
  <author email="josepablovasro@gmail.com">Jose Vasquez</author>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>

 <exec_depend>joint_state_publisher</exec_depend>
 <exec_depend>robot_state_publisher</exec_depend>
  <!-- <exec_depend>gazebo_ros</exec_depend> -->



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
